samples/_failures_safe/1761042073_e9d0e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d21cc7c.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
